syntax = "proto3";

option csharp_namespace = "Trill.Pusher";

package pusher;

service Notifier {
  rpc StreamStories(SubscribeStories) returns (stream Story);
  rpc StreamRejectedActions(SubscribeRejectedActions) returns (stream ActionRejected);
}

message SubscribeStories {
}

message SubscribeRejectedActions {
}

message Story {
  int64 id = 1;
  string title = 2;
  string createdAt = 3;
  StoryAuthor author = 4;
  repeated string tags = 5;
}

message StoryAuthor {
  string id = 1;
  string name = 2;
}

message ActionRejected {
  string reason = 1;
  string code = 2;
}